--- a/foodie/web/manifest.json
+++ b/foodie/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "foodie",
-    "short_name": "foodie",
+    "name": "finalproject",
+    "short_name": "finalproject",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
