--- a/foodie/pubspec.yaml
+++ b/foodie/pubspec.yaml
@@ -43,6 +43,15 @@ dependencies:
   google_sign_in: ^5.1.0
   sign_in_with_apple: ^4.0.0
   flutter_facebook_auth: ^5.0.6
+  shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
+  json_serializable: ^6.8.0
+  multi_select_flutter: ^4.1.3
+  pretty_dio_logger: ^1.3.1
+  awesome_dio_interceptor: ^1.2.0
+  permission_handler: ^11.3.1
+  json_annotation: ^4.9.0
+  
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
