--- a/foodie/pubspec.yaml
+++ b/foodie/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   awesome_dio_interceptor: ^1.2.0
   permission_handler: ^11.3.1
   json_annotation: ^4.9.0
+  connectivity_plus: ^4.0.1
   
 
 dev_dependencies:
