--- a/foodie/pubspec.yaml
+++ b/foodie/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: 2.4.0
+  local_auth: ^2.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
